<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLayoutPopup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <fr.pyjacpp.sudoku.ButtonPopupNumber
        android:id="@+id/Button1"
        app:text="@string/one"
        style="@style/ButtonPopupStyle" />

    <fr.pyjacpp.sudoku.ButtonPopupNumber
        android:id="@+id/Button2"
        android:layout_row="0"
        android:layout_column="1"
        app:text="@string/two"
        style="@style/ButtonPopupStyle" />

    <fr.pyjacpp.sudoku.ButtonPopupNumber
        android:id="@+id/Button3"
        android:layout_row="0"
        android:layout_column="2"
        app:text="@string/three"
        style="@style/ButtonPopupStyle" />

    <fr.pyjacpp.sudoku.ButtonPopupNumber
        android:id="@+id/Button4"
        android:layout_row="1"
        android:layout_column="0"
        app:text="@string/four"
        style="@style/ButtonPopupStyle" />

    <fr.pyjacpp.sudoku.ButtonPopupNumber
        android:id="@+id/Button5"
        android:layout_row="1"
        android:layout_column="1"
        app:text="@string/five"
        style="@style/ButtonPopupStyle" />

    <fr.pyjacpp.sudoku.ButtonPopupNumber
        android:id="@+id/Button6"
        android:layout_row="1"
        android:layout_column="2"
        app:text="@string/six"
        style="@style/ButtonPopupStyle" />

    <fr.pyjacpp.sudoku.ButtonPopupNumber
        android:id="@+id/Button7"
        android:layout_row="2"
        android:layout_column="0"
        app:text="@string/seven"
        style="@style/ButtonPopupStyle" />

    <fr.pyjacpp.sudoku.ButtonPopupNumber
        android:id="@+id/Button8"
        android:layout_row="2"
        android:layout_column="1"
        app:text="@string/eight"
        style="@style/ButtonPopupStyle" />

    <fr.pyjacpp.sudoku.ButtonPopupNumber
        android:id="@+id/Button9"
        android:layout_row="2"
        android:layout_column="2"
        app:text="@string/nine"
        style="@style/ButtonPopupStyle" />

    <fr.pyjacpp.sudoku.ButtonPopupNumber
        android:id="@+id/ButtonNothing"
        android:layout_row="3"
        android:layout_column="1"
        app:selectable="false"
        app:text=""
        style="@style/ButtonPopupStyle" />

    <fr.pyjacpp.sudoku.ButtonPopupNumber
        android:id="@+id/ButtonCancel"
        android:layout_row="3"
        android:layout_column="0"
        app:image="@drawable/ic_cancel"
        app:selectable="false"
        app:text=""
        style="@style/ButtonPopupStyle" />

    <fr.pyjacpp.sudoku.ButtonPopupNumber
        android:id="@+id/ButtonValid"
        android:layout_row="3"
        android:layout_column="2"
        app:image="@drawable/ic_check"
        app:selectable="false"
        app:text=""
        style="@style/ButtonPopupStyle" />
</GridLayout>
