<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content">

    <RadioGroup
        android:id="@+id/restartGameRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/restartThisGameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_restart_this_game"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/restartNewGameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_restart_new_game"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/restartGameRadioGroup"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/cancelButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/dialog_cancel"
            android:textAllCaps="false"
            android:textColor="@color/negative"
            android:textSize="20sp" />

        <Button
            android:id="@+id/validButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/dialog_valid"
            android:textAllCaps="false"
            android:textColor="@color/positive"
            android:textSize="20sp" />

    </LinearLayout>

</RelativeLayout>